@@ -9,6 +9,8 @@ version 0.54
 	* Option to globally disable Buddy Icon animation (Thanks
 	  Luke Schierer)
 	* Numerous bugfixes
+	* Yahoo! will tell you when your buddies are playing Yahoo! 
+ 	  games and give you the ability to join them
 	
 version 0.53 (02/28/2002):
 	* Updated Polish Translation (thanks Przemyslaw Sulek)
